Fixed header z-index.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -53,7 +53,7 @@ header {
     border-width: 0 1px 1px 1px;
     border-style: solid;
     border-color: #888;
-    z-index: 2;
+    z-index: 4;
     position: relative;
     
 }
